--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 body {
 	margin: 0;
-	font-family: Roboto;
+	font-family: "roboto", sans-serif;
+	font-style: normal;
 }
 .header {
 	display: flex;
@@ -59,3 +63,35 @@ button {
 	height: 260px;
 }
 
+.second-section {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.information-header {
+	font-size: 36px;
+	color: #1f2937;
+	font-weight: 900;
+}
+.information-container {
+	display: flex;
+	justify-content: center;
+	gap: 20px;
+	padding: 33px;
+}
+
+.info {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+}
+
+.illustration {
+	width: 120px;
+	height: 120px;
+	border: 2.75px solid #3882F6;
+	border-radius: 10px;
+	margin-bottom: 15px;
+}
