--- a/style.css
+++ b/style.css
@@ -95,3 +95,22 @@ button {
 	border-radius: 10px;
 	margin-bottom: 15px;
 }
+
+.third-section {
+	background-color: #e5e7eb;
+	font-size: 36px;
+	font-style: italic;
+	color: #1f2937;
+	font-weight: 300;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 50px;
+}
+
+.credit {
+	font-style: normal;
+	font-weight: 600;
+	font-size: 18px;
+	align-self: flex-end;
+}
