--- a/style.css
+++ b/style.css
@@ -45,6 +45,9 @@ body {
 	font-weight: 900;
 }
 
+.hero-secondary {
+	font-weight: 100;
+}
 button {
 	background-color: #3882F6;
 	color: white;
@@ -105,7 +108,7 @@ button {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding: 50px;
+	padding:100px;
 }
 
 .credit {
@@ -113,4 +116,27 @@ button {
 	font-weight: 600;
 	font-size: 18px;
 	align-self: flex-end;
+}
+
+.fourth-section {
+	display: flex;
+	margin: 70px;
+	padding: 40px;
+	background-color: #3882f6;
+	color: #f9faf8;
+	border-radius: 15px;
+	gap: 100px;
+}
+
+.call-to-action-header {
+	font-size: 18px;
+	font-weight: 600;
+}
+
+.call-to-action-content {
+	font-weight: 100;
+}
+
+.fourth-section button	{
+	border: 2.6px solid #f9faf8;
 }
