--- a/style.css
+++ b/style.css
@@ -140,3 +140,12 @@ button {
 .fourth-section button	{
 	border: 2.6px solid #f9faf8;
 }
+
+.footer {
+	display: flex;
+	background-color: #1f2937;
+	color: #e5e7eb;
+	justify-content: center;
+	align-items: center;
+	padding: 15px;
+}
